--- a/wp-content/themes/foodog/style.scss
+++ b/wp-content/themes/foodog/style.scss
@@ -9,8 +9,23 @@ Version: 0.1
     min-width: 600px;
 }
 
+@media screen and (max-width: 844px) {
+    .foodog-body{
+        min-width: 400px;
+    }
+    .foodog-menu-reseaux-all{
+        justify-content: start;
+    }
+    .foodog-footer-row{
+        div{
+            width: 90%;
+        }
+    }
+}
+
 body{
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 h1{
@@ -20,11 +35,14 @@ h2, h3, h4{
     font-weight: bolder;
 } 
 
+/*Pagination*/
+
 .foodog-pagination{
     display: flex;
     flex-direction: row;
     width: 100%;
     font-size: 12px;
+    justify-content: center;
     li{
         color: black;
         list-style-type: none;
@@ -47,12 +65,14 @@ h2, h3, h4{
     .foodog-pagination-current{
         background-color: #3a3e43;
         border: 1px solid #3a3e43;
-        span{
+        .current{
             color: white;
         }
     }
 }
 
+
+/*Header*/
 
 .foodog-menu-categorie{
     display: flex;
@@ -80,15 +100,27 @@ h2, h3, h4{
 }
 
 
+.header_title_single{
+    text-decoration: none;
+    color: black;
+    &:hover{
+        color: black;
+        text-decoration: none;
+    }
+}
+
 .foodog-home-page{
     width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
 
+/*Btn-top*/
+
 .foodog-btn-top{
     display: block;
     position: fixed;
+    z-index: 999;
     top: 50vh;
     right: 30px;
     color: lightgray;
@@ -105,6 +137,8 @@ h2, h3, h4{
         color: white;
     }
 }
+
+/*Menu reseaux*/
 
 .foodog-menu-reseaux{
     display: flex;
@@ -136,6 +170,8 @@ h2, h3, h4{
     justify-content: flex-end;
 }
 
+/*Header*/
+
 .foodog-search{
     border: 1px solid gray;
     border-radius: 5px;
@@ -145,13 +181,21 @@ h2, h3, h4{
 .foodog-header-title{
     display: flex;
     flex-direction: column;
+    a{
+        text-decoration: none;
+        color: black;
+    }
 }
+
+/*Separation*/
 
 .foodog-separation{
     width: 80%;
     margin-top: 0;
     padding-top: 0;
 }
+
+/*Home*/
 
 .foodog-home-first-card{
     width: 100%;
@@ -179,9 +223,10 @@ h2, h3, h4{
     h2{
         width: 100%;
         text-align: center;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         margin-top: -10px;
         text-transform: uppercase;
+        font-weight: bolder;
     }
 }
 
@@ -196,7 +241,7 @@ h2, h3, h4{
     h2{
         width: 100%;
         text-align: center;
-        font-size: 1rem;
+        font-size: 0.8rem;
         height: 50px;
         text-transform: uppercase;
     }
@@ -311,6 +356,8 @@ h2, h3, h4{
     }
 }
 
+/*Pub barre de droite*/
+
 .foodog-advertising{
     display: flex;
     flex-direction: column;
@@ -339,6 +386,8 @@ h2, h3, h4{
 
     }
 }
+
+/*barre droite de pub réseaux sociaux / single-page*/
 
 .foodog-advertising-social{
     display: flex;
@@ -408,6 +457,8 @@ h2, h3, h4{
     }
 }
 
+/*Menu header single page*/
+
 .menu-single-specif{
     flex-direction: column;
     text-align: left;
@@ -424,7 +475,11 @@ h2, h3, h4{
         height: 25px;
     }
     p{
+        position: relative;
+        display: block;
         padding-right: 10px;
+        width: 200px;
+        height: auto;
     }
     input{
         border: 2px solid black;
@@ -432,10 +487,554 @@ h2, h3, h4{
         padding-left: 5px;
     }
     button{
+        position: relative;
+        display: block;
         background-color: black;
         border: 2px solid black;
         color: white;
         text-transform: uppercase;
         font-size: 10px;
+        width: 100px;
     }
+}
+
+/*Footer*/
+
+.foodog-pagination {
+    li {
+        .foodog-pagination-link {
+            color: black;
+        }
+    }
+}
+
+
+.foodog-footericon {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 80%;
+    a {
+        display: block;
+        background-color: rgb(66, 66, 66);
+        color: white;
+        text-decoration: none;
+        padding: 5px;
+        border-radius: 50%;
+        margin-left: 5px;
+        i{
+            transform: translateY(5px);
+        }
+    }
+}  
+
+.foodog-footer-fourth {
+    background-color: #29292c;
+    a {
+        width: 45px;
+        height: 45px;
+        i {
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
+
+.foodog-footer-third {
+    padding-right: 15px;
+    padding-top: 25px;
+    img{
+        width: 90%;
+        height: auto;
+    }
+}
+
+.foodog-footer-first {
+    padding-top: 25px;
+    li{
+        width: 100%;
+        padding-top: 10px !important;
+        border-bottom: 1px solid gray;
+        padding-bottom: 10px;
+        text-align: start;
+    }
+}
+
+.foodog-footer-second {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: column;
+    div{
+        display: flex;
+        flex-direction: row;
+        padding: 5px;
+        a{
+            display: block;
+            width: 50%;
+            text-decoration: none;
+        }
+        img{
+            width: 100%;
+            height: auto;
+            margin: 0;
+        }
+        h3{
+            text-align: start;
+            margin-top: 10px;
+            padding: 0px 10px;
+            display: block;
+            width: 100%;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            color: white;
+        }
+    }
+}
+
+.foodog-footer-row {
+    background-color: #39393f;
+    text-decoration: none;
+    color: rgb(167, 167, 167);
+    padding-top: 40px;
+    padding-bottom: 35px;
+    h2 {
+        font-size: large;
+        font-weight: bold;
+    }
+    li {
+        list-style: none;
+        padding-top: 55px;
+        font-weight: bold;
+        font-size: medium;
+        a {
+            color: white;
+            padding-top: 25px;
+        }
+        .foodog-menu-link {
+        color: white;
+        list-style: none;
+        white-space: pre-line;
+        }
+    }
+}
+
+/* single page tiago*/
+
+
+
+.foodog-page-title {
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 0 50px 0;
+    a{
+      color: #4B4F54;
+      &:hover{
+        text-decoration: none;
+      }
+    }
+}
+.foodog-post-thumbnails{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+.foodog-social-middle-bar{
+    width: 100%;
+    height: 50px;
+    margin: 40px 0 40px 0;
+    border-top:  1px solid rgb(204, 204, 204); 
+    border-bottom: 1px solid rgb(204, 204, 204);
+    p{
+        color: rgb(180, 180, 180);
+        line-height: 50px;
+        display: inline-block;
+        img{
+          border-radius: 50%;
+          margin-right: 20px;
+          width: 40px;
+          height: 40px;
+        }
+        .author-name-post{
+          text-transform: uppercase;
+        }
+    }
+}
+
+.foodog-post-social-begin{
+  text-align: center;
+  display: inline-block;
+ 
+  span{
+      
+      text-transform: uppercase;
+      margin-right: 20px;
+      font-weight: bold;
+      
+  }
+  ul{
+      list-style-type:none;
+      padding: 0;
+      display: inline-block;
+      li{
+          width: 30px;
+          padding: 4px 6px;
+          display: inline-block;
+          border-radius: 50%;
+          margin-right: 20px;
+          font-size: 14px;
+          .foodog-menu-link{
+            i{
+              margin: 0;
+            }
+          }
+      }
+      .comment{
+        background-color: black;
+        width: 120px;
+        border-radius: 5px;
+        a{
+            color: white;
+            text-decoration: none;
+        }
+        &:hover{
+          background-color: rgb(70, 70, 70);
+        }
+        .foodog-menu-link{
+          i{
+            margin-right: 10px;
+          }
+        }
+      }
+      .facebook{
+          background-color: #4267B2;
+          a{
+            color: white;
+            text-decoration: none;
+        }
+          &:hover{
+            background-color: rgb(103, 133, 192);
+          }
+      }
+      .twitter{
+          background-color: #1DA1F2;
+          a{
+            color: white;
+            text-decoration: none;
+        }
+          &:hover{
+            background-color: rgb(78, 182, 247);
+          }
+      }
+      .pinterest{
+          background-color: #BD081C;
+          a{
+            color: white;
+            text-decoration: none;
+            }
+          &:hover{
+            background-color: rgb(194, 55, 71);
+          }
+      }
+      .google{
+          background-color: black;
+      }
+  }
+}
+
+
+
+
+/* Reseaux Sociaux Fin Article */
+.foodog-post-social-end{
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    p{
+        display: inline-block;
+        text-transform: uppercase;
+        margin-right: 20px;
+        font-weight: bold;
+    }
+    ul{
+        list-style-type:none;
+        padding: 0;
+        display: inline-block;
+        li{
+            width: 110px;
+            padding: 6px 8px;
+            display: inline-block;
+            border-radius: 5px;
+            text-align: center;
+            margin-right: 20px;
+            font-size: 12px;
+        }
+        .comment{
+            a{
+                color: white;
+                text-decoration: none;
+            }
+            background-color: black;
+            &:hover{
+                background-color: rgb(70, 70, 70);
+            }
+        }
+        .facebook{
+            a{
+                color: white;
+                text-decoration: none;
+            }
+            background-color: #4267B2;
+            &:hover{
+                background-color: rgb(103, 133, 192);
+            }
+        }
+        .twitter{
+            a{
+                color: white;
+                text-decoration: none;
+            }
+            background-color: #1DA1F2;
+            &:hover{
+                background-color: rgb(78, 182, 247);
+            }
+        }
+        .pinterest{
+            background-color: #BD081C;
+            a{
+                color: white;
+                text-decoration: none;
+            }
+            &:hover{
+                background-color: rgb(194, 55, 71);
+            }
+        }
+        .google{
+            background-color: black;
+        }
+    }
+}
+
+/* Newsletter */
+.foodog-newsletter-single{
+    text-align: center;
+    margin-top: 60px;
+    h3{
+        font-size: 35px;
+        margin: 30px 0 30px 0;
+    }
+    p{
+        margin: 30px 0 30px 0;
+    }
+    input{
+        padding: 8px 40px 10px 10px;
+    }
+    .foodog-newsletter-btn{
+        text-transform: uppercase;
+        color: white;
+        background-color: #FF8C70;
+        border: none;
+        padding: 8px 40px 10px 40px;
+        border: 2px solid #FF8C70;
+        font-weight: bold;
+        transition: all 0.3s linear;
+        &:hover{
+          background-color: white;
+          color: #FF8C70;
+        }
+    }
+}
+
+/* Previous Posts */
+.foodog-previous-post{
+    margin: 10px 0 0 0;
+    border-top:  1px solid rgb(204, 204, 204); 
+    border-bottom: 1px solid rgb(204, 204, 204);
+    height: 150px;
+    .row{
+        margin-top: 20px;
+        .column {
+            float: left;
+            padding: 10px;
+            height: 150px; 
+          }
+          .left {
+            width: 49%;
+            padding: 0 0 0 20px;
+            .foodog-previous-link-p{
+                margin:  0 0 30px 0;
+            }
+            .foodog-previous-link-a{
+                color: #ADADAD;
+                text-transform: uppercase;
+            }
+            .foodog-previous-title-a{
+                color: black;
+                text-transform: uppercase;
+            }
+          }
+          .vl {
+            border-left: 1px solid rgb(204, 204, 204);
+            height: 100px;
+          }
+          .right {
+            width: 49%;
+          }
+    }
+}
+
+@media (max-width:1200px){
+  .foodog-previous-post{
+    height: auto;
+    .row{
+      .left {
+        .foodog-previous-title-a{
+        font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+/* Author Bio (description) */
+.foodog-author-bio-single{
+    margin: 50px 0 50px 0;
+    img{
+        width: 20%;
+        height: 20%;
+        border-radius: 50%;
+        float: left;
+    }
+    h5{
+        display: inline-block;
+        margin-left: 5%;
+        font-weight: bold;
+    }
+    p{
+        margin-left: 25%;
+    }
+}
+
+/* Related Posts */
+.foodog-related-posts{
+    margin-top: 40px;
+      .related-title{
+        font-size: 20px;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+      }
+      .related-title::after{
+        content: "";
+        width: 62%;
+        height: 4px;
+        background: rgb(238, 238, 238);
+        position: absolute;
+        margin-left: 15px;
+        top: 50%;
+        
+      }
+      .foodog-related-individual{
+          display: inline-block;
+          max-width: 200px;
+          height: 350px;
+          vertical-align: middle;
+    
+        .foodog-post-related-img{
+            width: 200px;
+            height: 200px;
+            margin: 20px 9px 0 0;
+        }
+        .related-post-title{
+          color: black;
+          text-transform: uppercase;
+          margin-top: 15px;
+          font-weight: bold;
+        }
+      }
+}
+
+@media   (max-width: 1200px) {
+  .foodog-related-posts{
+    .foodog-related-individual{
+      display: block;
+      width: 400px;
+      height: auto;
+      .foodog-post-related-img{
+        width: 400px;
+        height: 400px;
+      }
+    }
+  }
+}
+
+/* Comments Form */
+#commentform{
+  label{
+    display: none;
+  }
+  .comment-notes{
+    display: none;
+  }
+  .comment-form-comment{ 
+      margin: 0;
+      textarea{
+        width: 100%;
+        margin-top: 30px;
+        border: 2px solid rgb(238, 238, 238);
+        padding: 15px;
+          &:focus{
+            background-color: rgb(224, 224, 224);
+            border: 2px solid rgb(109, 190, 245);
+          }
+      }
+  }
+  .comment-form-author, .comment-form-email, .comment-form-url{
+      width: 32%;
+      margin: 0 2px 0 0;
+      display: inline-block;
+        input{
+          width: 100%;
+          padding: 8px 15px;
+          display: inline-block;
+          border: 2px solid rgb(238, 238, 238);
+          margin-top: 20px;
+            &:focus{
+              background-color: rgb(224, 224, 224);
+              border: 2px solid rgb(109, 190, 245);
+            }
+        }
+  }
+  .comment-form-cookies-consent{
+    display: none;
+  }
+  .form-submit{
+    margin-bottom: 150px;
+    #submit{
+      color: white;
+      padding: 10px 20px;
+      text-transform: uppercase;
+      background-color: black;
+      border: 2px solid black;
+      margin-top: 30px;
+      transition: all 0.3s linear;
+      &:hover{
+        color: black;
+        background-color: white;
+        border: 2px solid black;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  #commentform{
+    .comment-form-author, .comment-form-email, .comment-form-url{
+      width: 100%;
+        input{
+          width: 100%;
+        }
+    }
+  }
 }
